--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,8 +16,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        tasks: [ "Task1" ]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +31,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file ${{ matrix.tasks }}/pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
