--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,4 +33,4 @@ jobs:
       run: mvn -B package --file "./${{ matrix.tasks }}/pom.xml"
 
     - name: Test with Maven
-      run: mvn test
+      run: mvn test --file "./${{ matrix.tasks }}/pom.xml"
