--- a/Task2/pom.xml
+++ b/Task2/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>ru.nsu.fit.oop.task2</groupId>
   <artifactId>Task2</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -33,6 +33,13 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.9.2</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
